--- a/emacs.org
+++ b/emacs.org
@@ -157,6 +157,7 @@ Now, start emacs.
 (use-package tree-sitter-langs)
 (add-hook 'tree-sitter-after-on-hook '(lambda () (tree-sitter-hl-mode 1)))
 (add-hook 'c-mode-hook '(lambda () (tree-sitter-mode 1)))
+(add-hook 'c++-mode-hook '(lambda () (tree-sitter-mode 1)))
 (add-hook 'sh-mode-hook '(lambda () (tree-sitter-mode 1)))
 (add-hook 'ruby-mode-hook '(lambda () (tree-sitter-mode 1)))
 (add-hook 'python-mode-hook '(lambda () (tree-sitter-mode 1)))
