--- a/emacs.org
+++ b/emacs.org
@@ -2125,6 +2125,17 @@ support =gist= & =gist+raw= org links
 (setq projectile-enable-caching t)
 (setq projectile-ignored-projects '("~/"))
 
+;; default node projects to yarn instead of npm
+(projectile-register-project-type 'npm '("package.json")
+                                  :project-file "package.json"
+                                  :compile "yarn install"
+                                  :test "yarn test"
+                                  :test-suffix ".spec")
+
+(defun counsel-projectile-switch-project-action-test (project)
+  (let ((projectile-switch-project-action (lambda () (projectile-test-project ivy-current-prefix-arg))))
+    (counsel-projectile-switch-project-by-name project)))
+
 (defun counsel-projectile-switch-project--cmd-dwim-action (project)
   (let ((projectile-switch-project-action (lambda () (cmd-dwim ivy-current-prefix-arg))))
     (counsel-projectile-switch-project-by-name project)))
@@ -2147,7 +2158,8 @@ support =gist= & =gist+raw= org links
 
 (ivy-add-actions
  'counsel-projectile-switch-project
- '(("!" counsel-projectile-switch-project--cmd-dwim-action "cmd-dwim in project root")
+ '(("P" counsel-projectile-switch-project-action-test "run project test command")
+   ("!" counsel-projectile-switch-project--cmd-dwim-action "cmd-dwim in project root")
    ("g" counsel-projectile-switch-project-action-vc "open project in vc-dir / magit / monky")
    ("C-xC-d" counsel-projectile-switch-project-action-dired "open project in dired")
    ("C-cme" counsel-projectile-switch-project-action-run-eshell "invoke eshell from project root")
