--- a/emacs.org
+++ b/emacs.org
@@ -114,8 +114,8 @@ Now, start emacs.
 (use-package yaml-mode)
 
 (use-package markdown-mode)
-;; (add-to-list 'auto-mode-alist '("\\.md$" . gfm-mode))
-;; (add-to-list 'auto-mode-alist '("\\.markdown$" . gfm-mode))
+(add-to-list 'auto-mode-alist '("\\.md$" . gfm-mode))
+(add-to-list 'auto-mode-alist '("\\.markdown$" . gfm-mode))
 
 (use-package cmake-mode)
 
@@ -156,6 +156,7 @@ Now, start emacs.
 (use-package tree-sitter)
 (use-package tree-sitter-langs)
 (add-to-list 'tree-sitter-major-mode-language-alist '(js-json-mode . json))
+(add-to-list 'tree-sitter-major-mode-language-alist '(gfm-mode . markdown))
 (add-hook 'tree-sitter-after-on-hook '(lambda () (tree-sitter-hl-mode 1)))
 
 (add-hook 'c-mode-hook '(lambda () (tree-sitter-mode 1)))
@@ -828,6 +829,7 @@ theme
 
 (setq enable-recursive-minibuffers t)
 
+(add-to-list 'auto-mode-alist '("\\.jsonc$" . js-mode))
 (add-to-list 'auto-mode-alist '("\\.scss$" . css-mode))
 (add-to-list 'auto-mode-alist '("Gemfile$" . ruby-mode))
 (add-to-list 'auto-mode-alist '("Rakefile$" . ruby-mode))
@@ -1943,7 +1945,6 @@ org-babel languages & automatic yasnippet creation
 (org-babel-src-yasnippet 'C++)
 
 ;; alias yasnippets to other ob-* blocks
-(org-babel-src-yasnippet 'json 'js)
 (org-babel-src-yasnippet 'javascript 'js)
 (org-babel-src-yasnippet 'nodejs 'js)
 (org-babel-src-yasnippet 'http 'verb)
@@ -1962,6 +1963,8 @@ org-babel languages & automatic yasnippet creation
 (org-babel-format-lang 'yaml)
 (org-babel-format-lang 'html)
 (org-babel-format-lang 'xml)
+(org-babel-format-lang 'js-json)
+(org-babel-format-lang 'json 'js-json)
 
 (setq org-babel-default-header-args:sh '((:results . "output"))
       org-babel-default-header-args:shell '((:results . "output"))
