--- a/emacs.org
+++ b/emacs.org
@@ -2121,9 +2121,10 @@ support =gist= & =gist+raw= org links
 ;; default node projects to yarn instead of npm
 (projectile-register-project-type 'npm '("package.json")
                                   :project-file "package.json"
-                                  :compile "yarn install"
-                                  :test "yarn test"
-                                  :test-suffix ".spec")
+                                  :configure "yarn install"
+                                  :compile "yarn dev"
+                                  :run "yarn dev"
+                                  :test "yarn test")
 
 (defun counsel-projectile-switch-project-action-test (project)
   (let ((projectile-switch-project-action (lambda () (projectile-test-project ivy-current-prefix-arg))))
