--- a/emacs.org
+++ b/emacs.org
@@ -1471,6 +1471,7 @@ argument makes the windows rotate backwards."
 (define-key sp-keymap (kbd "C-M-n") nil)
 (global-set-key (kbd "C-x C-d") 'dired)
 (global-set-key (kbd "C-x d") 'cd)
+(define-key ctl-x-4-map (kbd "C-d") 'dired-other-window)
 (define-key dired-mode-map (kbd "C-x C-q") 'wdired-change-to-wdired-mode)
 (define-key dired-mode-map (kbd "w") 'wdired-change-to-wdired-mode)
 (define-key dired-mode-map (kbd "<tab>") 'dired-hide-subdir-dwim)
