add an org state for "merged"

--- a/emacs.org
+++ b/emacs.org
@@ -1871,7 +1871,7 @@ If the server is connected and a prefix arg is provided, then invoke a quick /ms
       org--blocked-todo-boxed-states '("blocked" "halted" "stalled" "paused")
       org--doing-todo-boxed-states '("doing" "going")
       org--doing-todo-states '("⚐")
-      org--delegated-todo-boxed-states '("thinking" "investigating" "delegated" "assigned" "pr" "waiting" "deploying" "note" "idea")
+      org--delegated-todo-boxed-states '("thinking" "investigating" "delegated" "assigned" "pr" "waiting" "merged" "deploying" "note" "idea")
       org--done-todo-boxed-states '("done" "cancelled" "canceled" "finished" "boom" "read" "answered" "noted" "fixed" "solved" "warned")
       org--done-todo-states '("✘" "✔"))
 
