--- a/emacs.org
+++ b/emacs.org
@@ -1948,6 +1948,7 @@ org-babel languages & automatic yasnippet creation
 (org-babel-format-lang 'yaml)
 (org-babel-format-lang 'html)
 (org-babel-format-lang 'xml)
+(org-babel-format-lang 'css)
 
 (org-babel-format-lang 'json)
 ;; (add-to-list 'org-src-lang-modes '("json" . js-json))
