--- a/emacs.org
+++ b/emacs.org
@@ -774,6 +774,9 @@ theme
 
 (c-set-offset 'case-label '+) ;; https://www.gnu.org/software/emacs/manual/html_node/efaq/Indenting-switch-statements.html
 
+(when (executable-find "rg")
+  (setq grep-command "rg --with-filename --no-heading --line-number --ignore-case "))
+
 (winner-mode 1)
 
 (recentf-mode 1)
@@ -1475,6 +1478,7 @@ argument makes the windows rotate backwards."
 (global-set-key (kbd "C-x C-d") 'dired)
 (global-set-key (kbd "C-x d") 'cd)
 (define-key ctl-x-4-map (kbd "C-d") 'dired-other-window)
+(define-key grep-mode-map (kbd "w") 'wgrep-change-to-wgrep-mode)
 (define-key dired-mode-map (kbd "C-x C-q") 'wdired-change-to-wdired-mode)
 (define-key dired-mode-map (kbd "w") 'wdired-change-to-wdired-mode)
 (define-key dired-mode-map (kbd "<tab>") 'dired-hide-subdir-dwim)
