set compilation-scroll-output to t

--- a/emacs.org
+++ b/emacs.org
@@ -728,6 +728,8 @@ theme
 (add-to-list 'eshell-preoutput-filter-functions 'xterm-color-filter)
 (setq eshell-output-filter-functions (remove 'eshell-handle-ansi-color eshell-output-filter-functions))
 
+(setq compilation-scroll-output t)
+
 (show-paren-mode 1)
 
 (setq use-short-answers t)
