--- a/emacs.org
+++ b/emacs.org
@@ -22,6 +22,15 @@ Now, start emacs.
 * packages
 
 #+BEGIN_SRC emacs-lisp
+(require 'package)
+(add-to-list 'package-archives '("melpa" . "https://melpa.org/packages/") t)
+(add-to-list 'package-archives '("melpa-stable" . "https://stable.melpa.org/packages/") t)
+(package-initialize)
+(unless (file-exists-p package-user-dir) (package-refresh-contents))
+
+(require 'use-package)
+(setq use-package-always-ensure t)
+
 (use-package gnu-elpa-keyring-update)
 
 (use-package xterm-color)
@@ -148,7 +157,7 @@ Now, start emacs.
 ;; eventually replace with built-in treesit support
 (use-package tree-sitter)
 (use-package tree-sitter-langs)
-;; (add-to-list 'tree-sitter-major-mode-language-alist '(js-json-mode . json))
+(add-to-list 'tree-sitter-major-mode-language-alist '(js-json-mode . json))
 (add-to-list 'tree-sitter-major-mode-language-alist '(gfm-mode . markdown))
 (add-hook 'tree-sitter-after-on-hook '(lambda () (tree-sitter-hl-mode 1)))
 (global-tree-sitter-mode 1)
@@ -708,7 +717,7 @@ theme
 
 (setq help-window-select t)
 
-;; (pixel-scroll-precision-mode 1)
+(pixel-scroll-precision-mode 1)
 
 (setq enable-local-variables :all)
 
