--- a/emacs.org
+++ b/emacs.org
@@ -1492,6 +1492,11 @@ argument makes the windows rotate backwards."
 (global-set-key (kbd "C-o") 'open-line-previous)
 (global-set-key (kbd "C-<return>") 'open-line-next)
 (global-set-key (kbd "C-j") 'newline-and-open-line-previous)
+(global-set-key (kbd "M-c") 'capitalize-dwim)
+(global-set-key (kbd "M-u") 'upcase-dwim)
+(global-set-key (kbd "C-x C-u") 'upcase-dwim)
+(global-set-key (kbd "M-l") 'downcase-dwim)
+(global-set-key (kbd "C-x C-l") 'downcase-dwim)
 (global-set-key (kbd "C-<tab>") 'indent-region-or-buffer)
 (global-set-key (kbd "C-M-<tab>") 'jw-pulse-text)
 (global-set-key (kbd "C-M-;") 'cycle-spacing) ;; just-one-space is at S-M-<space>
