--- a/emacs.org
+++ b/emacs.org
@@ -1583,49 +1583,68 @@ argument makes the windows rotate backwards."
 (jw--global-set-visual-area-key "<C-S-wheel-left>" 'jw-nothing)
 #+END_SRC
 
-* eshell
+* eshell and vterm
 
 #+BEGIN_SRC emacs-lisp
 (defun eshell-dwim (arg)
-  "A dwim wrapper for `eshell', except that this function provides ordered cycling through all eshells creating using prefix arguments.
-No prefix argument: Create a new eshell or switch to an existing eshell. If multiple eshell buffers exist, then cycle through them in their buffer number order.
-Single prefix arg C-u: Create an additional eshell: *eshell*, *eshell*<2>, *eshell*<3>, etc.
-Negative prefix arg C--: Similar behavior to no prefix argument, except the cycling behavior is in reverse.
-"
   (interactive "P")
-  (pcase (prefix-numeric-value arg)
-    (4 (eshell arg))
-    (-1 (eshell--cycle-to-next t))
-    (_ (eshell--cycle-to-next nil))))
+  (jw--shells-dwim-gen 'eshell-mode arg 'eshell))
 
-(defun eshell-kill-eshells ()
+(defun eshell-kill-all ()
   (interactive)
-  (-each (eshell--buffers-list) (lambda (b) (kill-buffer b))))
+  (jw--shells-kill-buffers 'eshell-mode))
 
 (define-key jw-keymap (kbd "e") 'eshell-dwim)
-(define-key jw-keymap (kbd "E") 'eshell-kill-eshells)
+(define-key jw-keymap (kbd "E") 'eshell-kill-all)
 
-(defun eshell--extract-buffer-name-digit (buffer)
+(when (package-installed-p 'vterm)
+  (defun vterm-dwim (arg)
+    (interactive "P")
+    (jw--shells-dwim-gen 'vterm-mode arg 'vterm))
+
+  ;; not the most optimal way to exit vterm since it has functions it runs on exit
+  (defun vterm-kill-all ()
+    (interactive)
+    (jw--shells-kill-buffers 'vterm-mode))
+
+  (define-key jw-keymap (kbd "v") 'vterm-dwim)
+  (define-key jw-keymap (kbd "V") 'vterm-kill-all)
+  )
+
+(defun jw--shells-dwim-gen (mode arg create-new)
+"A wrapper for `eshell' and `vterm', except that this function provides ordered cycling through all shells creating using prefix arguments.
+No prefix argument: Create a new shell or switch to an existing shell. If multiple shell buffers exist, then cycle through them in their buffer number order.
+Single prefix arg C-u: Create an additional shell: *eshell*, *eshell*<2>, *eshell*<3>, etc.
+Negative prefix arg C--: Similar behavior to no prefix argument, except the cycling behavior is in reverse."
+  (pcase (prefix-numeric-value arg)
+    (4 (funcall-interactively create-new arg))
+    (-1 (jw--shells-cycle-to-next mode t create-new))
+    (_ (jw--shells-cycle-to-next mode nil create-new))))
+
+(defun jw--shells-kill-buffers (mode)
+  (-each (jw--shells-buffer-list mode) (lambda (b) (kill-buffer b))))
+
+(defun jw--shells-extract-buffer-name-digit (buffer)
   (string-to-number (or (car (s-match "[[:digit:]]+" (buffer-name buffer))) "-1")))
 
-(defun eshell--buffers-list-ordering (b1 b2)
-  (< (eshell--extract-buffer-name-digit b1) (eshell--extract-buffer-name-digit b2)))
+(defun jw--shells-buffers-list-ordering (b1 b2)
+  (< (jw--shells-extract-buffer-name-digit b1) (jw--shells-extract-buffer-name-digit b2)))
 
-(defun eshell--buffers-list ()
-  (-sort 'eshell--buffers-list-ordering (-filter (lambda (buffer) (eq (buffer-local-value 'major-mode buffer) 'eshell-mode)) (buffer-list))))
+(defun jw--shells-buffer-list (mode)
+  (-sort 'jw--shells-buffers-list-ordering (-filter (lambda (buffer) (eq (buffer-local-value 'major-mode buffer) mode)) (buffer-list))))
 
-(defun eshell--buffer-names-list ()
-  (-map (lambda (b) (buffer-name b)) (eshell--buffers-list)))
+(defun jw--shells-buffer-names-list (mode)
+  (-map (lambda (b) (buffer-name b)) (jw--shells-buffer-list mode)))
 
-(defun eshell--cycle-to-next (cycle-backward)
-  (let ((eshells (eshell--buffer-names-list)))
-    (if (or (not (eq major-mode 'eshell-mode)) (not eshells))
-        (eshell nil) ;; switch to or create the first eshell if we're not in an eshell or if no eshells exist
-      (let* ((num-eshells (length eshells))
-             (idx (or (-elem-index (buffer-name) eshells) num-eshells))
-             (next-idx (mod (if cycle-backward (- idx 1) (+ idx 1)) num-eshells))
-             (next-eshell (nth next-idx eshells)))
-        (switch-to-buffer next-eshell)))))
+(defun jw--shells-cycle-to-next (mode cycle-backward create-new)
+  (let ((shells (jw--shells-buffer-names-list mode)))
+    (if (or (not (eq major-mode mode)) (not shells))
+        (funcall-interactively create-new nil) ;; switch to or create the first shell/term if none exist
+      (let* ((num-shells (length shells))
+             (idx (or (-elem-index (buffer-name) shells) num-shells))
+             (next-idx (mod (if cycle-backward (- idx 1) (+ idx 1)) num-shells))
+             (next-shell (nth next-idx shells)))
+        (switch-to-buffer next-shell)))))
 
 (require 'em-alias)
 (eshell/alias "l" "ls -alh")
